Fri Nov 28 11:12:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/AV/AVStreams_i.h:
          Doxygen change

        * orbsvcs/orbsvcs/AV/SCTP_SEQ.cpp:
          No need to use some intermediate variables

        * orbsvcs/orbsvcs/Naming/Naming_Server.cpp:
        * orbsvcs/tests/Notify/lib/common.cpp:
          Use ascii format specifiers

Fri Nov 28 11:11:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/AMH/Sink_Server/MT_AMH_Server.h:
          Doxygen change

Fri Nov 28 11:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Codeset/UTF8_Latin1_Translator.cpp:
          Use true/false

        * tao/ORB.h:
        * tao/ORB.inl:
        * tao/ORB_Core.h:
        * tao/ORB_Core.inl:
          Added _refcnt() method to retrieve the current refcount

        * tao/TAO_Internal.cpp:
          Layout change

Thu Nov 27 04:09:39 CST 2008  Simon Massey  <sma@prismtech.com>

	* TAO version 1.6.7 released.

Wed Nov 26 13:55:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/DevGuideExamples/DevGuideExamples.mwc:
          Empty work file for recursion.

Mon Nov 24 12:20:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

          Compare SignedGen::val as numerical value

Fri Nov 21 14:41:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_ACE.mwc:
          Exclude orbsvcs/DevGuideExamples

Wed Nov 19 15:14:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/be/be_sunsoft.cpp:
          Attempted fix of the 64bit compile warnings problem.

Wed Nov 19 10:59:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/be/be_helper.cpp:
          Reverted Reversion of Nov 18 for change of Oct 13 to convert
          format specifiers to plain ascii. This change was not the
          introducer of the 64bit compile warnings problem.

Wed Nov 19 09:53:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
