@@ -1,3 +1,8 @@
+Fri Nov 28 11:14:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_sunsoft.cpp
+          Use ascii format specifiers
+
 Fri Nov 28 11:12:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/AV/AVStreams_i.h:
